--- a/Styles/global.css
+++ b/Styles/global.css
@@ -5,6 +5,10 @@
     padding: 0;
 }
 
+:root {
+    --green: #219642;
+}
+
 body {
     font-family: 'Mukta', sans-serif;
     background: #1E1F24;
@@ -22,13 +26,41 @@ header {
 }
 
 ul {
-    text-decoration: none;
     list-style: none;
     gap: 2rem;
 }
 
 a {
-    
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover {
+    color: var(--green);
+}
+
+main {
+    margin-top: 5rem;
+}
+
+input {
+    border-radius: 1rem;
+    border: none;
+    font-size: 1.2rem;
+    padding-left: 1rem;
+}
+
+input:focus {
+    outline: none;
+}
+
+button {
+    border: none;
+    border-radius: 1rem;
+    background: var(--green);
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
 }
 
 .row {
@@ -36,3 +68,42 @@ a {
     flex-direction: row;
 }
 
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+.circle {
+    border-radius: 10rem;
+}
+
+#validate-nif {
+    align-items: center;
+    gap: 2rem;
+}
+
+#validate-nif input {
+    width: 20rem;
+}
+
+#validate-nif button {
+    width: 5rem;
+}
+
+#portugal-flag {
+    background-image: url(../Images/bandeira.png);
+    background-size: cover;
+    height: 2rem;
+    width: 2rem;
+}
+
+#validate-result {
+    gap: 2rem;
+    height: 4rem;
+    width: 21rem;
+    background: #595959;
+    border-radius: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
