--- a/Styles/global.css
+++ b/Styles/global.css
@@ -106,4 +106,16 @@ button {
     justify-content: center;
     align-items: center;
     display: none;
+    border: 0.1rem solid;
+}
+
+#request-error {
+    display: none;
+}
+
+#validity {
+    width: 6rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    border: 0.1rem solid;
 }
