--- a/Styles/global.css
+++ b/Styles/global.css
@@ -130,8 +130,7 @@ button {
 
 #validate-result {
     gap: 2rem;
-    height: 4rem;
-    width: 30rem;
+    padding: 1rem;
     background: #595959;
     border-radius: 0.5rem;
     justify-content: center;
