--- a/Styles/global.css
+++ b/Styles/global.css
@@ -28,6 +28,11 @@ header {
     background: #0a0a0ce1;
 }
 
+footer {
+    background: #0a0a0ce1;
+    padding: 1rem;
+}
+
 ul {
     list-style: none;
     gap: 2rem;
@@ -101,6 +106,7 @@ button {
 .section {
     margin-top: 2rem;
     padding: 2rem 0;
+    gap: 2rem;
 }
 
 .center {
@@ -114,18 +120,19 @@ button {
 }
 
 #validate-nif input {
-    width: 20rem;
-    height: 2rem;
+    width: 22rem;
+    height: 2.5rem;
 }
 
 #validate-nif button {
-    width: 5rem;
-    height: 2rem;
+    width: 8rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
 }
 
 #portugal-flag {
-    height: 2rem;
-    width: 2rem;
+    height: 2.5rem;
+    width: 2.5rem;
 }
 
 #validate-result {
@@ -151,6 +158,5 @@ button {
 
 #api {
     background: #0a0a0ce1;    
-    align-items: center;
-    gap: 2rem;
+    align-items: center;    
 }
